# RustStreamBench

./: .gitignore  create-logs.sh
gif-encoder/: Cargo.toml
gif-encoder/src/: core.rs  main.rs  rayon.rs  rust_ssp.rs  sequential.rs
log-processing/: Cargo.toml  get_inputs.sh
log-processing/src/: main.rs  rayon.rs  sequential.rs
neurostream/: Cargo.toml
neurostream/src/: get_inputs.sh  main.rs  sequential.rs
neurostream/src/libs/neuroflow-rayon/: Cargo.toml
neurostream/src/libs/neuroflow-rust-ssp/: Cargo.toml
