[package]
name = "gif-encoder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
ffmpeg-next = "5.0.3"
gif = "0.11.3"
rust-ssp = { path = "~/../../libs/rust-ssp", package = "rust-spp" }
