[package]
name = "log-processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4"
maxminddb = "0.23.0"
rayon = "1.5.3"
rust_ssp = { path = "../libs/rust-ssp", package = "rust-spp" }
