[package]
name = "neurostream"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
neuroflow = "0.1.3"
neuroflow_rayon = { path = "src/libs/neuroflow-rayon", package = "neuroflow-rayon" }
neuroflow_rust_ssp = { path = "src/libs/neuroflow-rust-ssp", package = "neuroflow-rust-ssp" }
